welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:1: error: Missing closing brace `}' assumed here
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
^